--- a/_data/2021/fgv-dapp-brazil/speakers.yml
+++ b/_data/2021/fgv-dapp-brazil/speakers.yml
@@ -8,18 +8,45 @@
   bio: "Cezar Zucco is a Political Scientist and Associate Professor at FGV/EBAPE, a school of business and public administration in Rio de Janeiro. He was previously Assistant Professor at Rutgers, and has held visiting appointments at Nuffield College, Princeton, Yale, and IUPERJ (currently IESP). His work focuses on Latin American politics, and He has written on executive-legislative relations, political parties, voting behavior, and the politics of public policy."
   website: https://professor.fgv.br/ebape/cesar-zucco
   
+- name: Thiago Marzagão
+  image: /assets/images/marzagao.jpg
+  bio: "Thiago Marzagão is a data scientist. He uses machine learning to automate the detection of corruption in the Brazilian government. He got his Ph.D. from the Ohio State University in 2014."
+  website: http://thiagomarzagao.com/
+  
 - name: Ernesto Calvo
   image: /assets/images/calvo.jpg
   bio: "Ernesto Calvo is Professor of Government and Politics at the University of Maryland and Director of the interdisciplinary Lab for Computational Social Science. His research focuses on the study of comparative political institutions, political representation, and social networks. He is the author of Non-Policy Politics (Cambridge U.P, 2019) with M. Victoria Murillo; Legislator Success in Fragmented Congresses in Argentina (Cambridge U.P: 2014), and over 70 publications in Latin America, Europe, and the United States."
   website: http://gvptsites.umd.edu/calvo/
  
-- name: Thiago Marzagão
-  image: /assets/images/marzagao.jpg
-  bio: "Thiago Marzagão is a data scientist. He uses machine learning to automate the detection of corruption in the Brazilian government. He got his Ph.D. from the Ohio State University in 2014."
-  website: http://thiagomarzagao.com/
+
+- name: Rochelle Terman
+  image: /assets/images/Terman.jpeg  
+  bio: " Rochelle Terman is an Assistant Professor in the Department of Political Science at the University of Chicago. She specializes in international relations, with an emphasis on international norms, human rights, and the Muslim world. She teaches computational social science at both the undergraduate and graduate levels, including Computational Tools for Social Science. She is a certified instructor with Software Carpentry and Data Carpentry."
+  website: http://rochelleterman.com/
+ 
  
 - name: Ricardo Dahis
   image: /assets/images/dahis.jpg
   bio: "Ricardo is a PhD candidate in Economics at Northwestern University, and co-founder of Base dos Dados. His research focuses on decentralization, public service delivery, deforestation, and racial inequality."
   website: https://www.ricardodahis.com/
+ 
+- name: Cecilia Olliveira
+  image: /assets/images/cecilia.jpg
+  bio: "Cecilia Olliveira is an investigative journalist who focuses on drug and arms trafficking and violence. In 2016, frustrated with the lack of publicly available data, she began mapping every shooting in Rio de Janeiro. This idea turned into Fogo Cruzado, an open data platform on armed violence that is spreading to every major city in Brazil. She was the only Latin American finalist in  Reporters Without Borders’ 2020 Press Awards, which celebrates intrepid and courageous voices in global media."
+  website: https://fogocruzado.org.br/
+ 
+- name: Cristina Tardáguila
+  image: /assets/images/tardaguila.jpg
+  bio: "Cristina Tardáguila is the International Fact-Checking Network’s Associate Director and also the founder of Agência Lupa, the first fact-checking initiative in her country, Brazil. As a journalist, she has worked in some of the major Brazilian media outlets: O Globo, Folha de S.Paulo and revista piauí. She graduated in journalism in Rio de Janeiro, got her master degree in Madrid and her MBA in Digital Marketing again in Rio. She has published two books: “A Arte do Descaso” (in 2016), about art crimes - and “Você foi Enganado” (2018), about presidential false claims. She’s been to TEDx’s red carpet twice and won the 2018 elPeriodico’s/Grupo award in 2018 in Spain as the best journalist of the year. Tardaguila has been nominated for the Gabriel García Marquez Award, in Colombia, and the Comunique-se Awards, in Brazil. Both in their innovation categories. She now coordinates the largest fact-checking collaborative project: the #CoronaVirusFacts Alliance"
+  website: 
+ 
+- name:
+  image:
+  bio:
+  website:
+ 
+- name:
+  image:
+  bio:
+  website:
  
