add rutgers speaker

--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -13,6 +13,11 @@
   image: /assets/images/hanashepherd.jpg
   website: https://sociology.rutgers.edu/people/faculty/core-department-faculty/504-shepherd-hana
 
+- name: Vivek Singh
+  bio: "Vivek Singh is Associate Professor of Library and Information Science at Rutgers University."
+  image: /assets/images/VivekSingh.jpg
+  website: https://wp.comminfo.rutgers.edu/vsingh/
+
 - name: Zhanna Terechshenko
   image: /assets/images/terechshenkoZhanna.jpg
   bio: "Zhanna Terechshenko is a Postdoctoral Fellow at the Center for Social Media and Politics at New York University."
