--- a/_data/2021/fgv-dapp-brazil/speakers.yml
+++ b/_data/2021/fgv-dapp-brazil/speakers.yml
@@ -31,7 +31,7 @@
   website: https://www.ricardodahis.com/
  
 - name: Cecilia Olliveira
-  image: /assets/images/cecilia.png
+  image: /assets/images/Cecilia.png
   bio: "Cecilia Olliveira is an investigative journalist who focuses on drug and arms trafficking and violence. In 2016, frustrated with the lack of publicly available data, she began mapping every shooting in Rio de Janeiro. This idea turned into Fogo Cruzado, an open data platform on armed violence that is spreading to every major city in Brazil. She was the only Latin American finalist in  Reporters Without Borders’ 2020 Press Awards, which celebrates intrepid and courageous voices in global media."
   website: https://fogocruzado.org.br/
  
