--- a/_data/2021/beijing/hero.yml
+++ b/_data/2021/beijing/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 14 to June 25, 2021 | Tsinghua University | Virtual event"
+header_2: "June 14 to June 25, 2021 | Network Science | Virtual event"
 location: "SICSS-Beijing "
