--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -1,18 +1,80 @@
 - date: All times are local Istanbul Time and All program will be Zoom-based.
 
-- date: "Pre-SICSS Period: Tasks and Coffee Talks"
+- date: 2021-05-30
+- name:  Welcome Event
+    - name: Zoom Welcome session and the commencement of the pre-SICSS period.
+
+- date: "Pre-SICSS Period: Coding and Reading Tasks"
   events:
-    - name: "**[Pre-SICSS Tasks](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/istanbul/pre-SICSS%20tasks.md)**<br/>Theory and practise rarely meet in the real world. Therefore instead of writing tutorials which are long, fancy and full with nice codes, we are going to suggest three introductory guides and two abstract case studies, and provide guidance every week till SICSS via zoom and Slack. The tasks cover data collection, cleaning and reporting. We are leaving the analysis to SICSS weeks."
+    - name: "**[Pre-SICSS Tasks](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/istanbul/pre-SICSS%20tasks.md)**<br/>This 2-week pre-SICSS period will feature a number of essential computational social science readings, along with programming foundation modules to bridge everyone’s diverse skill set. Even if you have excellent programming skills, please go along with us through this period, so that when the actual SICSS begins, you’ll already have a good sense of common problems and skill sets, so that you can get an understanding of who to partner with during the second week of SICSS, where groups will come up with their own research questions and work on it for an entire week."
     - name: "**Coffee Talks**<br/> While working Pre-SICSS tasks, informal small group coffee talks will be organized to share our experiences, discuss on project ideas, talk about SICSS materials, and chat on participant's questions."
 
 - date: 2021-06-01
-  events:
-    - name: "Schedule coming soon..."
-    
-    
+  events: Small Group Office Hours and Paper Talks for two weeks
+
+- date: 2021-06-13
+- name: Pre-SICSS Wrap-up session to evaluate the tasks and leisure
+
+
+- date: "First Week of ‘Real SICSS’: Workshops and Group Discussions"
+- name: This week will be full of lectures and small group discussions. We will use the flipped classroom model to follow some of the SICSS curriculum. Additionally, we will organize method workshops with hands-on experience. You will also have speed dating sessions to establish your group for the second week program and you are expected to report your group members and a short description of your group project at the end of the week.
+
+
+- date: 2021-06-14
+- name: Introduction to curriculum and group discussions on Ethics
+
+- date: 2021-06-15
+- name: Text as Data
+
+- date: 2021-06-16
+- name: Networks and Bots
+
+- date: 2021-06-17
+- name: Location and Geospatial Analysis
+
+- date: 2021-06-18
+- name: Social Media as Event Data and Research Speed Dating
+
+- date: 2021-06-20
+- name: Last day for declaring group members and project proposals
+
+
+- date: Second Week of ‘Real SICSS’: Group Projects and Alumni Sessions
+- name: This week will be focused on group work projects. Up until this date, you should have an idea of which participants you’d like to team up with and the research question that you’ll work on. Teams that people built in previous SICSS_Istanbul events have flourished into full-fledged research groups, presenting their SICSS papers at APSA, ASA and beyond! 
+
+
+- date: 2021-06-21
+  name: Short presentation of project proposals and Alumni Session
+  
+- date: 2021-06-22
+  name: Office Hour and Alumni Session
+  
+- date: 2021-06-23
+  name: Office Hour and Alumni Session
+
+- date: 2021-06-24
+  name: Office Hour and Alumni Session
+  
 - date: 2021-06-25
-  name: Present Group Projects
+  name: Research presentations from each group and the final day of SICSS
   events:
     - name: "Presentations"
       time: "14:00 - 16:00"
     
+    
+ 
+ 
+ 
+
+ 
+
+
+ 
+
+
+ 
+
+
+
+ 
+
