--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -2,7 +2,7 @@
 
 - date: 2021-05-30
 - name:  Welcome Event
-    - name: Zoom Welcome session and the commencement of the pre-SICSS period.
+    - name: "Zoom Welcome session and the commencement of the pre-SICSS period."
 
 - date: "Pre-SICSS Period: Coding and Reading Tasks"
   events:
