--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -47,7 +47,7 @@
   name: Last day for declaring group members and project proposals
   events:
 
-- date: Second Week of ‘Real SICSS’: Group Projects and Alumni Sessions
+- date: "Second Week of ‘Real SICSS’: Group Projects and Alumni Sessions"
   name: This week will be focused on group work projects. Up until this date, you should have an idea of which participants you’d like to team up with and the research question that you’ll work on. Teams that people built in previous SICSS_Istanbul events have flourished into full-fledged research groups, presenting their SICSS papers at APSA, ASA and beyond! 
 
 
