update TA info on people page
Add Demetrius name/photo/bio, add Zanele name/photo

--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -32,8 +32,14 @@ organizers:
 teaching_assistants:
   title: Teaching Assistants 
   people:
-    - name: Coming Soon!
-    
+    - name: Zanele Munyikwa
+      image: /assets/images/zanele.jpg
+      
+    - name: Demetrius Murphy
+      image: /assets/images/demetriusMurphy.jpeg
+      bio: "Demetrius Murphy is a Ph.D. student in the Department of Sociology at  The University of Southern California. He earned his B.A. in Management Consulting and Africana Studies at the University of Notre Dame and his M.A. in Latin American Studies at Vanderbilt University. His research interests lie in the areas of race and ethnicity, economic sociology, and urban sociology, focusing mainly on the social meaning of the good life, the Black middle class, and (anti-)Blackness in Brazil and The United States. He has two on-going projects. One project investigates how the hashtag #BlackLivesMatter works in Brazil. His primary research project examines how perceptions of the good life are “made” and the social struggles in which particular visions become dominant in Black communities in Los Angeles."
+      website: https://dornsife.usc.edu/cf/soci/soci_student_display.cfm?Person_ID=1088889
+      
 event_staff:
   title: Event Staff
   people:
