adding flash talks

--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -23,7 +23,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Designing a Research Question with Digital Trace Data (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:30 Collecting Digital Trace Data (*Zoom*)"
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (*Zoom*)"
@@ -36,7 +36,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Group Exercise (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Group Exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
@@ -48,7 +48,7 @@
     - name: "10:15 - 10:30 Introduction to the group exercise [Lesson plan (participants)] (link coming soon) (*Zoom*)"
     - name: "10:30 - 11:30 Morning group exercise (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*)"
     - name: "3:00 - 3:15 Break"
@@ -62,7 +62,7 @@
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*)"
     - name: "10:30 - 11:30 Participate in the Fraglie Families Challenge [Lesson plan (participants)] (link coming soon) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge (*Zoom*)"
     - name: "3:00 - 3:15 Break"
