--- a/_data/2021/hong_kong/location.yml
+++ b/_data/2021/hong_kong/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/hongkong.jpg
-title: Hong Kong *Coming Soon*
+title: Hong Kong
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: hong_kong
