--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -1,3 +1,4 @@
 - date: 2021-06-14
   events:
-    - name: "Schedule coming soon..."
+    - name: "Schedule coming soon... We plan to meet virtually for 4 hours per day. Reading group, invited talks, and group projects will be scheduled."
+ 
