--- a/_data/2021/beijing/speakers.yml
+++ b/_data/2021/beijing/speakers.yml
@@ -1,3 +1,6 @@
+- name: More speakers TBA...
+
+
 - name: Morgan R. Frank
   image: /assets/images/morganFrank.jpg
   bio: Morgan Frank is an Assistant Professor at the School of Computing and Information at the University of Pittsburgh, a Research Affiliate at the MIT Media Lab, and a Digital Fellow at the Stanford Institute for Human-Centered Artificial Intelligence. Morgan is interested in the complexity of AI, the future of work, and the socio-economic consequences of technological change. While many studies focus on phenotypic labor trends, Morgan’s recent research examines how genotypic skill-level processes around AI impact individuals and society. Combining labor research with investigations into the nature of AI research and the social or societal implications of AI adoption, Morgan hopes to inform our understanding of AI’s impact. Morgan has a PhD from MIT’s Media Lab, was a postdoc at MIT IDSS and the IDE,  and has a masters degree in applied mathematics from the University of Vermont where he was a member of the Computational Story Lab.
@@ -16,4 +19,3 @@
   website: https://www.media.mit.edu/people/sandy/overview/
   
 
-- name: More speakers TBA
