--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -1,3 +1,8 @@
+- name: Munmun De Choudhury
+  image: 
+  bio: "Munmun De Choudhury is Associate Professor in the School of Interactive Computing at Georgia Tech."
+  website: http://www.munmund.net/
+
 - name: Christopher Fariss
   image: /assets/images/farissChris.jpg
   bio: "Christopher Fariss is Assistant Professor in the Department of Political Science at the University of Michigan."
