update rutgers speaker

--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -1,5 +1,5 @@
 - name: Munmun De Choudhury
-  image: 
+  image: /assets/images/munmundechoudhury.jpg
   bio: "Munmun De Choudhury is Associate Professor in the School of Interactive Computing at Georgia Tech."
   website: http://www.munmund.net/
 
