--- a/_data/2021/hong_kong/faculty.yml
+++ b/_data/2021/hong_kong/faculty.yml
@@ -11,6 +11,6 @@
 
 
 - name: Haohan Chen
-  image: /assets/images/haohanChen.jpg
+  image: /assets/images/haohanChen.jpeg
   bio: "Haohan Chen is currently a postdoctoral fellow at the Center for Social Media and Politics at New York University. He received my PhD in Political Science and MS in Statistical Science from Duke University in December 2019. He will join the Department of Politics and Public Administration at University of Hong Kong in August 2021. His substantive research focuses on political behavior and political communication under both authoritarian and democratic contexts. My methodological research focuses on machine learning methods (particularly Bayesian statistical learning) for text and network data from social media."
   website: https://haohanchen.github.io/
