--- a/_data/2021/hse/speakers.yml
+++ b/_data/2021/hse/speakers.yml
@@ -1,1 +1,10 @@
-- name:
+- name: Munmun De Choudhury
+  image: /assets/images/DeChoudhury.jpg
+  bio: "Munmun De Choudhury is an Assistant Professor in the School of Interactive Computing at Georgia Tech. She leads the Social Dynamics and Wellbeing Lab (SocWeb). She is also affiliated with the Graphics and Visualization Center (GVU), Institute for People and Technology (IPaT), and the Machine Learning Center (ML@GT). Before moving to Georgia Tech, she was a postdoctoral researcher in the neXus group at Microsoft Research, Redmond. Trained as a computer scientist, she is interested in problems at the intersection of computer science and social science, especially questions around making sense of human behavior as manifested via our online social footprints. She is motivated by how the availability of large-scale online social data, coupled with computational methods and resources can help answer fundamental questions relating to our social lives, particularly our health and well-being. Her research has pioneered the computational use of social media data for mental health."
+  website: http://www.munmund.net/
+
+- name: Sune Lehmann
+  image: /assets/images/Lehmann.png
+  bio: "Sune Lehmann is a Professor of Networks and Complexity Science at DTU Compute, Technical University of Denmark. He is also a Professor of Social Data Science at the Center for Social Data Science (SODAS), University of Copenhagen. His work focuses on quantitative understanding of social systems based on massive data sets. A physicist by training, his research draws on approaches from the physics of complex systems, machine learning, and statistical analysis. He works on large-scale behavioral data and while his primary focus is on modeling complex networks, his research has made substantial contributions on topics such as human mobility, sleep, academic performance, complex contagion, epidemic spreading, and behavior on twitter. In the past, he has worked at Institute for Quantitative Social Science at Harvard University, the College of Computer and Information Science at Northeasthern University, Laszlo Barabási’s Center for Complex Network Research at Northeastern University and the Center for Cancer Systems Biology at the Dana Farber Cancer Institute."
+  website: https://sunelehmann.com/
+
