--- a/_data/2021/hse/teaching_assistants.yml
+++ b/_data/2021/hse/teaching_assistants.yml
@@ -1,5 +1,5 @@
 - name: Anastasia Karpova
-  bio: "Anastasia is currently pursuing her bachelor degree in economics from Higher school of economics (HSE). She was a teaching assistant for many statistical and data science courses at HSE. She is interested in computational methods in macroeconomics, marketing and social sciences."
+  bio: "Anastasia is currently pursuing her master degree in data science from Higher school of economics (HSE). She was a teaching assistant for many statistical and data science courses at HSE. She is interested in computational methods in macroeconomics, marketing and social sciences."
   image: /assets/images/Karpova.jpg
   website: https://www.facebook.com/asyakarpovaa
   
