--- a/_data/2021/beijing/speakers.yml
+++ b/_data/2021/beijing/speakers.yml
@@ -1,5 +1,9 @@
 - name: More speakers TBA...
 
+- name: Chris Bail
+  image: /assets/images/chris2019.jpg
+  bio: Chris Bail is Professor of Sociology and Public Policy at Duke University where he directs the Polarization Lab. He is also affiliated with the Interdisciplinary Data Science Program, the Duke Network Analysis Center, and the Duke Population Research Institute. His research examines political polarization, culture and social psychology using tools from the field of computational social science. He is the author of Terrified: How Anti-Muslim Fringe Organizations Became Mainstream.
+  website: https://www.chrisbail.net/
 
 - name: Morgan R. Frank
   image: /assets/images/morganFrank.jpg
