--- a/_data/2021/beijing/people.yml
+++ b/_data/2021/beijing/people.yml
@@ -33,7 +33,7 @@ localspeakers:
       website: http://www.chrisbail.net/
 
     - name: Yi Bu
-      image: /assets/images/yiBu.jpg
+      image: /assets/images/yiBu.png
       bio: Yi Bu is an Assistant Professor at the Department of Information Management, Peking University. Before joining Peking University, he was a research fellow at the Center for Science of Science and Innovation, Northwestern Institute on Complex Systems, and the Kellogg School of Management, Northwestern University working with Dr. Dashun Wang. Yi is doing research in the application aspect of big data analytics, with a particular focus on scholarly data mining. Specifically, his research endeavors to elucidate the process of knowledge diffusion, the analysis of scholarly networks and their variants, and bibliometric indicators for research assessment. Yi has an undergraduate degree in information management and system from Peking University, an M.S. in data science, and a Ph.D. in informatics from Indiana University. At Indiana, he was supervised by Professor Ying Ding.
       website: https://buyi08.wixsite.com/yi-bu
 
