--- a/_data/2021/taiwan/schedule.yml
+++ b/_data/2021/taiwan/schedule.yml
@@ -1,3 +1,93 @@
+- date: All times are in Taiwan Time (UTC+8)
+
 - date: 2021-06-28
+  name: Introduction and Ethics
   events:
-    - name: "Schedule coming soon..."
+    - name: "9:30 - 10:35 Introduction and Opening" 
+    - name: "10:55 - 12:00 Ethics: Discussion Activity [Lesson plan (participants)] (link coming soon))"
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 15:00 Guest Speaker 1 + Q&A"
+    - name: "15:00 - 15:15 Debrief and Logistics"
+    
+
+- date: 2021-06-29
+  name: API & Automated Text Analysis
+  events:
+    - name: "9:30 - 10:35 Watch one recorded session of SICSS festival, followed by group discussion" 
+    - name: "10:55 - 12:00 Application Programming Interfaces Group Activity"
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 14:30 An Introduction to Text Analysis Text Analysis Basics"
+    - name: "14:30 - 15:00 Text Analysis: Discussion Activity"
+    - name: "15:00 - 15:15 Debrief and Logistics"
+    
+- date: 2021-06-30
+  name: Building Crawlers
+  events:
+    - name: "9:30 - 10:35 Screen scraping/crawler exercise - brainstorming" 
+    - name: "10:55 - 12:00 Screen scraping/crawler exercise - prototyping"
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 15:00 Guest Speaker 2 + Q&A"
+    - name: "15:00 - 15:15 Debrief and Logistics"
+    
+- date: 2021-07-01
+  name: Surveys in the Digital Age
+  events:
+    - name: "9:30 - 10:35 Probability and Non-Probability Sampling" 
+    - name: "10:55 - 12:00 Probability and Non-Probability Sampling"
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 15:00 Guest Speaker 3 + Q&A"
+    - name: "15:00 - 15:15 Debrief and Logistics"
+
+- date: 2021-07-02
+  name: Experiment & Research Pairing Activity
+  events:
+    - name: "9:30 - 10:35 Group exercise brainstorming" 
+    - name: "10:55 - 12:00 Watch another recorded session of SICSS festival, followed by group discussion"
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 14:00 Research Pairing Activity 1"
+    - name: "14:00 - 15:00 Project Discussion"
+    - name: "15:00 - 15:15 Debrief and Logistics"
+    
+
+- date: 2021-07-05
+  name: Research Project
+  events:
+    - name: "9:30 - 10:35 Research Pairing Activity 2" 
+    - name: "10:55 - 12:00 Research Project"
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 15:00 Watch another recorded session of SICSS festival, followed by group discussion"
+    - name: "15:15 - 16:00 Research Project" 
+
+
+- date: 2021-07-06
+  name: Research Project + Speaker Session
+  events:
+    - name: "9:30 - 12:00 Research Project" 
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 15:00 Guest Speaker 4 + Q&A"
+    - name: "15:15 - 16:00 Research Project"  
+
+- date: 2021-07-07
+  name: Research Project
+  events:
+    - name: "9:30 - 12:00 Research Project" 
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 14:20 Mid-Point Flash Talks + Feedback"
+    - name: "14:40 - 16:00 Mid-Point Flash Talks + Feedback"
+
+- date: 2021-07-08
+  name: Research Project + Speaker Session
+  events:
+    - name: "9:30 - 12:00 Research Project" 
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 15:00 Guest Speaker 5 + Q&A"
+    - name: "15:15 - 16:00 Research Project" 
+
+- date: 2021-07-09
+  name: Research Project
+  events:
+    - name: "9:30 - 10:45 Research Project" 
+    - name: "10:55 - 12:00 Presentation" 
+    - name: "12:00 - 13:00 Lunch & optional small group discussion"
+    - name: "13:00 - 15:00 Presentation"
+    - name: "15:15 - 16:00 Closing Session"
